--- a/dojo-blog/src/index.css
+++ b/dojo-blog/src/index.css
@@ -28,7 +28,7 @@
 }
 .navbar a:hover {
   color: black;
-  font-weight: bolder;
+  font-weight:bold;
   background-color: #f1356d;
   border-radius: 8px;
 }
