Updated fetchdata to be asynchronous

--- a/dojo-blog/src/index.css
+++ b/dojo-blog/src/index.css
@@ -8,28 +8,35 @@
 }
 .navbar {
   padding: 20px;
-  display: flex;
+  display:flex;
   align-items: center;
-  max-width: 600px;
+  max-width: 100%;
   margin: 0 auto;
-  border-bottom: 1px solid #f2f2f2;
+  border-bottom: 1px solid black;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: white;
 }
 .navbar h1 {
-  color: #f1356d;
+  color: rgba(0, 148, 123, 0.733);
+  font-size: 40px;
+
 }
 .navbar .links {
   margin-left: auto;
   border-radius: 8px;
+  font-size: 20px;
 }
 .navbar a {
   margin-left: 16px;
   text-decoration: none;
   padding: 10px;
+  color: rgba(0, 148, 123, 0.733);
 }
 .navbar a:hover {
-  color: black;
+  color: rgba(0, 148, 123, 0.733);
   font-weight:bold;
-  background-color: #f1356d;
   border-radius: 8px;
 }
 .content {
@@ -50,6 +57,7 @@
 
 .blog-preview h2 {
   font-size: 20px;
-  color: #f1356d;
+  color: rgba(0, 148, 123, 0.733);
   margin-bottom: 8px;
 }
+
