--- a/dojo-blog/src/index.css
+++ b/dojo-blog/src/index.css
@@ -19,7 +19,7 @@
   background-color: white;
 }
 .navbar h1 {
-  color: rgba(0, 148, 123, 0.733);
+  color: rgba(2, 117, 97, 0.733);
   font-size: 40px;
 
 }
@@ -32,10 +32,10 @@
   margin-left: 16px;
   text-decoration: none;
   padding: 10px;
-  color: rgba(0, 148, 123, 0.733);
+  color: rgba(2, 117, 97, 0.733);
 }
 .navbar a:hover {
-  color: rgba(0, 148, 123, 0.733);
+  color: rgba(2, 117, 97, 0.733);
   font-weight:bold;
   border-radius: 8px;
 }
@@ -57,7 +57,7 @@
 
 .blog-preview h2 {
   font-size: 20px;
-  color: rgba(0, 148, 123, 0.733);
+  color: rgba(2, 117, 97, 0.733);
   margin-bottom: 8px;
 }
 
@@ -71,10 +71,51 @@
 /* blog details page */
 .blog-details h2{
   font-size: 20px;
-  color: rgba(0, 148, 123, 0.733);
+  color: rgba(2, 117, 97, 0.733);
   margin-bottom: 10px;
 }
 
 .blog-details div {
   margin: 20px 0;
+}
+
+.blog-details button {
+  background: rgba(2, 117, 97, 0.733);
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+/* create new blog form */
+.create {
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+}
+.create label {
+  text-align: left;
+  display: block;
+}
+.create h2 {
+  font-size: 20px;
+  color: rgba(2, 117, 97, 0.733);
+  margin-bottom: 30px;
+}
+.create input, .create textarea, .create select {
+  width: 100%;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  display: block;
+}
+.create button {
+  background:rgba(2, 117, 97, 0.733);
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
 }
